# Tic-Tac-Toe-Showdown-Humans-vs.-Robot

./: README.md  instructions.txt  main.py  pyproject.toml  vars.py
Defaults/: SetupDetecao.json  detecaocor.json  jogo.json  posicoes.json
Externo/: getPosicaoRos.py  gradie.py  move.py  movePosicaoRos.py  robotMove.py  temp.py
libs/: ImageRec.py  JsonLib.py  NegaMax.py  RasConnect.py  YoloDataset.py  YoloPool.py
